<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/lighting_list_title"
        android:text="@string/dialog_lighting_list_title"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@color/red_action_bar"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/lighting_list_empty"
        android:visibility="gone"
        android:layout_margin="30dp"
        android:text="@string/dialog_lighting_list_empty"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lighting_list_title"
        android:gravity="center"
        android:textColor="@color/color_primary_alpha"/>

    <ListView
        android:id="@+id/lighting_list"
        android:padding="15dp"
        android:layout_below="@+id/lighting_list_title"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

    <LinearLayout
            android:id="@+id/footer"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_gravity="bottom"
                android:text="@string/cancel"
                android:background="@drawable/selector_red_button"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_height="50dp"/>

        <Button android:id="@+id/add_button"
                android:layout_width="0dp"
                android:layout_gravity="bottom"
                android:text="@string/add"
                android:background="@drawable/selector_white_button"
                android:layout_weight="1"
                android:textColor="@color/color_primary_alpha"
                android:layout_height="50dp"/>

    </LinearLayout>

</RelativeLayout>