<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="210dp">

        <TextView
            android:id="@+id/title"
            android:text="Criar novo afloramento"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/red_action_bar"/>

        <GridLayout
            android:layout_alignParentRight="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="5dp"
            android:columnCount="2"
            android:id="@+id/layout_grid"
            tools:context=".GridLayoutActivity" >

            <TextView
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:minHeight="30dp"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:gravity="center|start"
                android:padding="10dp"
                android:layout_row="0"
                android:textColor="@color/white"
                android:background="@color/red_action_bar"
                android:textStyle="bold"
                android:text="@string/dialog_transformer_status" />

            <Spinner
                style="@android:style/Widget.Holo.Light.Spinner"
                android:id="@+id/spinner_status"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:minHeight="30dp"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:gravity="center"
                android:padding="10dp"
                android:layout_row="0"
                android:singleLine="false"/>


            <TextView
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:minHeight="30dp"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:gravity="center|start"
                android:padding="10dp"
                android:layout_row="1"
                android:textColor="@color/white"
                android:background="@color/red_action_bar"
                android:textStyle="bold"
                android:text="@string/dialog_transformer_owner" />

            <Spinner
                style="@android:style/Widget.Holo.Light.Spinner"
                android:id="@+id/spinner_proprietario"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:minHeight="30dp"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:gravity="center"
                android:padding="10dp"
                android:layout_row="1"
                android:singleLine="false"/>

        </GridLayout>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_gravity="bottom"
                android:text="@string/cancel"
                android:background="@drawable/selector_red_button"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_height="50dp"/>

            <Button android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_gravity="bottom"
                android:text="@string/save"
                android:background="@drawable/selector_white_button"
                android:layout_weight="1"
                android:textColor="@color/color_primary_alpha"
                android:layout_height="50dp"/>

        </LinearLayout>
    </RelativeLayout>

</ScrollView>