<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_collapseMode="pin">

                    <ImageView
                            android:layout_width="wrap_content"
                            android:id="@+id/appbar_logo"
                            android:contentDescription="@string/app_name"
                            android:layout_marginLeft="-10dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:src="@drawable/logo"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/appbar_title"
                            android:layout_marginLeft="-10dp"
                            android:layout_height="wrap_content"
                            android:textSize="8pt"
                            android:layout_gravity="left"/>

            </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <fragment
          android:id="@+id/map"
          android:layout_marginTop="?attr/actionBarSize"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          tools:context="com.visium.fieldservice.ui.maps.MapsPickLocationActivity"
          android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/map_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="86dp"
            android:src="@drawable/ic_map"
            app:borderWidth="0dp" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_height="wrap_content">

        <TextView
              android:layout_weight=".7"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:textSize="16sp"
              android:lines="2"
              android:layout_gravity="center_vertical"
              android:gravity="center_vertical"
              android:textColor="@color/black"
              android:text="@string/pick_location_label" />

        <Button
                android:id="@+id/button_pick_confirmation"
                android:layout_weight=".3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/selector_red_button"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/next" />

    </LinearLayout>

</RelativeLayout>